--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,9 +40,9 @@ jobs:
       - name: Run tests
         run: ./gradlew test
 
-  jar:
+  package:
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -59,7 +59,7 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
-    needs: build
+    needs: package
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
