--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,9 +40,26 @@ jobs:
       - name: Run tests
         run: ./gradlew test
 
-  package:
+#  package:
+#    runs-on: ubuntu-latest
+#    needs: build
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 23
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'temurin'
+#          java-version: '23'
+#          cache: gradle
+#
+#      - name: Jar with Gradle
+#        run: ./gradlew jar
+
+  docker:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -54,15 +71,8 @@ jobs:
           java-version: '23'
           cache: gradle
 
-      - name: Jar with Gradle
-        run: ./gradlew jar
-
-  docker:
-    runs-on: ubuntu-latest
-    needs: package
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Package with Gradle
+        run: ./gradlew bootJar
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -76,4 +86,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/spring-rag:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/spring-rag:$(date +%s)
