--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,4 +86,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/spring-rag:$(date +%s)
+          tags: ${{ secrets.DOCKER_USERNAME }}/spring-rag:latest
