--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,10 @@ repositories {
 dependencies {
 	implementation 'dev.langchain4j:langchain4j-open-ai-spring-boot-starter:1.0.0-alpha1'
 	implementation 'dev.langchain4j:langchain4j-spring-boot-starter:1.0.0-alpha1'
-	implementation 'org.hsqldb:hsqldb'
+	implementation 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
