--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ langchain4j.open-ai.chat-model.api-key=demo
 langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
 langchain4j.open-ai.chat-model.log-requests=true
 langchain4j.open-ai.chat-model.log-responses=true
+
+langchain4j.open-ai.streaming-chat-model.api-key=demo
+langchain4j.open-ai.streaming-chat-model.model-name=gpt-4o-mini
+langchain4j.open-ai.streaming-chat-model.log-requests=true
+langchain4j.open-ai.streaming-chat-model.log-responses=true
