--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,3 +87,30 @@ jobs:
           file: Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/spring-rag:latest
+
+  kubernetes:
+    runs-on: ubuntu-latest
+    name: build
+    steps:
+      - name: Start Kubernetes minikube
+        uses: medyagh/setup-minikube@master
+      - name: Try the Kubernetes cluster
+        run: kubectl get nodes
+      - name: Deploy the image to minikube
+        run: kubectl apply -f src/main/k8s/deployment.yml
+      - name: Get Kubernetes service URL
+        run: |
+          kubectl wait --for=condition=Ready pod/spring-rag
+          kubectl get pods
+          minikube service list
+          minikube service spring-rag --url
+          echo "------------------opening the service------------------"
+      - name: Test Kubernetes service URL
+        uses: nick-fields/retry@v2
+        with:
+          timeout_seconds: 10
+          max_attempts: 4
+          command: curl $(minikube service spring-rag --url)/samples/EFREI
+      - name: Log Kubernetes pods
+        run: |
+          kubectl logs $(kubectl get pods -l app=spring-rag -o name)
