--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,41 +6,24 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 23
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '23'
-          cache: gradle
-
-      - name: Build with Gradle
-        run: ./gradlew clean build
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 23
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '23'
-          cache: gradle
-
-      - name: Run tests
-        run: ./gradlew test
-
-#  package:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 23
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'temurin'
+#          java-version: '23'
+#          cache: gradle
+#
+#      - name: Build with Gradle
+#        run: ./gradlew clean build
+#
+#  test:
 #    runs-on: ubuntu-latest
 #    needs: build
 #    steps:
@@ -54,39 +37,56 @@ jobs:
 #          java-version: '23'
 #          cache: gradle
 #
-#      - name: Jar with Gradle
-#        run: ./gradlew jar
-
-  docker:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 23
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '23'
-          cache: gradle
-
-      - name: Package with Gradle
-        run: ./gradlew bootJar
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/spring-rag:latest
+#      - name: Run tests
+#        run: ./gradlew test
+#
+##  package:
+##    runs-on: ubuntu-latest
+##    needs: build
+##    steps:
+##      - name: Checkout code
+##        uses: actions/checkout@v3
+##
+##      - name: Set up JDK 23
+##        uses: actions/setup-java@v3
+##        with:
+##          distribution: 'temurin'
+##          java-version: '23'
+##          cache: gradle
+##
+##      - name: Jar with Gradle
+##        run: ./gradlew jar
+#
+#  docker:
+#    runs-on: ubuntu-latest
+#    needs: test
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 23
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'temurin'
+#          java-version: '23'
+#          cache: gradle
+#
+#      - name: Package with Gradle
+#        run: ./gradlew bootJar
+#
+#      - name: Log in to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#
+#      - name: Build and push Docker image
+#        uses: docker/build-push-action@v4
+#        with:
+#          context: .
+#          file: Dockerfile
+#          push: true
+#          tags: ${{ secrets.DOCKER_USERNAME }}/spring-rag:latest
 
   kubernetes:
     runs-on: ubuntu-latest
@@ -100,7 +100,7 @@ jobs:
         run: kubectl apply -f src/main/k8s/deployment.yml
       - name: Get Kubernetes service URL
         run: |
-          kubectl wait --for=condition=Ready pod/spring-rag
+          kubectl wait --for=condition=Ready pod -l app=spring-rag
           kubectl get pods
           minikube service list
           minikube service spring-rag --url
