--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,13 +102,16 @@ jobs:
           kubectl apply -f src/main/k8s/deployment.yml
       - name: Get Kubernetes service URL
         run: |
-          kubectl describe pod -l app=spring-rag
+          sleep 40
+#          kubectl describe pod -l app=spring-rag
           kubectl logs $(kubectl get pods -l app=spring-rag -o name)
           kubectl wait --for=condition=Ready pod -l app=spring-rag --timeout=120s
           kubectl get pods
           minikube service list
           minikube service spring-rag --url
           echo "------------------opening the service------------------"
+        with:
+          timeout_seconds: 120
       - name: Test Kubernetes service URL
         uses: nick-fields/retry@v2
         with:
