fix ci-cd pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,6 +90,7 @@ jobs:
 
   kubernetes:
     runs-on: ubuntu-latest
+    needs: docker
     steps:
       - uses: actions/checkout@v2
       - name: Start Kubernetes minikube
